e2e-tests/golden-manifests-ocp/simple-nginx-nopv/output/resources/simple-nginx-nopv/Service__v1_simple-nginx-nopv_my-simple-nginx-nopv.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-nginx-nopv
  name: my-simple-nginx-nopv
  namespace: simple-nginx-nopv
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8081
      protocol: TCP
      targetPort: 8080
  selector:
    app: simple-nginx-nopv
  sessionAffinity: None
  type: ClusterIP
