e2e-tests/golden-manifests-ocp/simple-nginx-nopv/output/resources/simple-nginx-nopv/Route_route.openshift.io_v1_simple-nginx-nopv_my-simple-nginx-nopv.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    openshift.io/host.generated: "true"
  labels:
    app: simple-nginx-nopv
  name: my-simple-nginx-nopv
  namespace: simple-nginx-nopv
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: my-simple-nginx-nopv
    weight: 100
  wildcardPolicy: None
